--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"homepage": "https://meePwn1.github.io/homework-2",
-	"name": "incubator",
+	"name": "homework-2",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
