--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint": "^8.55.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
+		"jest": "^29.7.0",
 		"react-redux": "^9.0.4",
 		"react-router-dom": "^6.21.0",
 		"redux": "^5.0.0",
