--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"sbuild": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
+		"test": "jest",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d dist"
 	},
@@ -22,11 +23,8 @@
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.15.0",
-		"@testing-library/jest-dom": "^6.1.5",
 		"@testing-library/react": "^14.1.2",
-		"@testing-library/user-event": "^14.5.1",
 		"@types/jest": "^29.5.11",
-		"@types/node": "^20.10.4",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
 		"@types/uuid": "^9.0.7",
@@ -41,6 +39,8 @@
 		"react-redux": "^9.0.4",
 		"react-router-dom": "^6.21.0",
 		"redux": "^5.0.0",
+		"ts-jest": "^29.1.1",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.2.2",
 		"uuid": "^9.0.1",
 		"vite": "^5.0.8"
